Page responsibility and alignment fixed, style of button:disabled fixed.

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -110,6 +110,19 @@ html {
   cursor: pointer;
 }
 
+.btn-orange:disabled {
+  color: var(--dark-grey);
+  background-color: var(--grey);
+  border: .1rem solid var(--grey);
+  cursor: not-allowed;
+}
+
+.btn-orange:disabled:hover {
+  background-color: var(--grey);
+  border: .1rem solid var(--grey);
+  color: var(--dark-grey);
+}
+
 .btn-orange:hover {
   color: var(--white);
   background-color: var(--dark-orange);
